test/e2e/testdata/ja-fingerprint.yaml
# ./certs/client-mtls-trustbundle.sh
#
# kubectl create secret generic foo-com-tls -n gateway-conformance-infra --from-file=ca.crt=example.com.crt --from-file=tls.crt=foo.example.com.crt --from-file=tls.key=foo.example.com.key --dry-run=client -o yaml > foo-com-tls.yaml
apiVersion: v1
data:
  ca.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURWVENDQWoyZ0F3SUJBZ0lVQXFpaGJLVjBzZ240dXZwMEI1N0l3VUdNc2dBd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0xURVZNQk1HQTFVRUNnd01aWGhoYlhCc1pTQkpibU11TVJRd0VnWURWUVFEREF0bGVHRnRjR3hsTG1OdgpiVEFlRncweU5URXlNekV3TVRRd016bGFGdzB5TmpFeU16RXdNVFF3TXpsYU1DMHhGVEFUQmdOVkJBb01ER1Y0CllXMXdiR1VnU1c1akxqRVVNQklHQTFVRUF3d0xaWGhoYlhCc1pTNWpiMjB3Z2dFaU1BMEdDU3FHU0liM0RRRUIKQVFVQUE0SUJEd0F3Z2dFS0FvSUJBUURYVWx1ZkRkREhlSlRDS3BhUVBKV1lQRnp0Vno4bmpwcEZ4THcyWkdjOQp0N2xJNmp3MDUvZjZoan [...]
  tls.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUQwakNDQXJxZ0F3SUJBZ0lVT3pqOWVzaSt0ajVPQWxxQVViQ0NmZ0ErMVc0d0RRWUpLb1pJaHZjTkFRRUwKQlFBd0xURVZNQk1HQTFVRUNnd01aWGhoYlhCc1pTQkpibU11TVJRd0VnWURWUVFEREF0bGVHRnRjR3hsTG1OdgpiVEFlRncweU5URXlNekV3TVRRd05EQmFGdzB6TlRFeU1qa3dNVFF3TkRCYU1Ea3hHREFXQmdOVkJBTU1EMlp2CmJ5NWxlR0Z0Y0d4bExtTnZiVEVkTUJzR0ExVUVDZ3dVWlhoaGJYQnNaU0J2Y21kaGJtbDZZWFJwYjI0d2dnRWkKTUEwR0NTcUdTSWIzRFFFQkFRVUFBNElCRHdBd2dnRUtBb0lCQVFER3Z6eFpwam1zNFo0N2l5MlRyZm1QL2cwOApObjJsVFF6NlZOR2JEQ [...]
  tls.key: LS0tLS1CRUdJTiBQUklWQVRFIEtFWS0tLS0tCk1JSUV2Z0lCQURBTkJna3Foa2lHOXcwQkFRRUZBQVNDQktnd2dnU2tBZ0VBQW9JQkFRREd2enhacGptczRaNDcKaXkyVHJmbVAvZzA4Tm4ybFRRejZWTkdiREI1V1ZaOFoybzlSU3ZBbTdET1UrbDl0NnpsbVlhQy91TVRESWd3VApQYUVOV2ZQMXlkTmlGY0IzcXVkNVF3ejloMUFoRmpONjI0QWNSWCtNNy9YdEhESHlhNTgvNHBwbU5DVCtOUFV5ClkrSHFRSFNEcmhGTjhFTldRdkhaVTdacUcvTU9pNWQ2SHRGN20xK2hkZXY4K1F6QjlScFZSNjNJK29EMUVoVjEKeGZqeEgvQkVTdFNQZmt1eGhZWTcwclF6YkhGdGpjUE1Qd3NBQ2hFWGJzaktDUUNBbHdTQlF1SlhmcGpDVC9xVQo4TlM1RUVxTjFEL1I0S [...]
kind: Secret
metadata:
  creationTimestamp: null
  name: foo-com-tls
  namespace: gateway-conformance-infra
type: kubernetes.io/tls
---
# kubectl create secret generic bar-com-tls -n gateway-conformance-infra --from-file=ca.crt=example.com.crt --from-file=tls.crt=bar.example.com.crt --from-file=tls.key=bar.example.com.key --dry-run=client -o yaml > bar-com-tls.yaml
apiVersion: v1
data:
  ca.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURWVENDQWoyZ0F3SUJBZ0lVQXFpaGJLVjBzZ240dXZwMEI1N0l3VUdNc2dBd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0xURVZNQk1HQTFVRUNnd01aWGhoYlhCc1pTQkpibU11TVJRd0VnWURWUVFEREF0bGVHRnRjR3hsTG1OdgpiVEFlRncweU5URXlNekV3TVRRd016bGFGdzB5TmpFeU16RXdNVFF3TXpsYU1DMHhGVEFUQmdOVkJBb01ER1Y0CllXMXdiR1VnU1c1akxqRVVNQklHQTFVRUF3d0xaWGhoYlhCc1pTNWpiMjB3Z2dFaU1BMEdDU3FHU0liM0RRRUIKQVFVQUE0SUJEd0F3Z2dFS0FvSUJBUURYVWx1ZkRkREhlSlRDS3BhUVBKV1lQRnp0Vno4bmpwcEZ4THcyWkdjOQp0N2xJNmp3MDUvZjZoan [...]
  tls.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUQwakNDQXJxZ0F3SUJBZ0lVT3pqOWVzaSt0ajVPQWxxQVViQ0NmZ0ErMVc4d0RRWUpLb1pJaHZjTkFRRUwKQlFBd0xURVZNQk1HQTFVRUNnd01aWGhoYlhCc1pTQkpibU11TVJRd0VnWURWUVFEREF0bGVHRnRjR3hsTG1OdgpiVEFlRncweU5URXlNekV3TVRRd05EQmFGdzB6TlRFeU1qa3dNVFF3TkRCYU1Ea3hHREFXQmdOVkJBTU1EMkpoCmNpNWxlR0Z0Y0d4bExtTnZiVEVkTUJzR0ExVUVDZ3dVWlhoaGJYQnNaU0J2Y21kaGJtbDZZWFJwYjI0d2dnRWkKTUEwR0NTcUdTSWIzRFFFQkFRVUFBNElCRHdBd2dnRUtBb0lCQVFEZG03NWRuL1RhOVlOa0VYNFQ4aHlYRUtOaApCM0lRZHRRR0ZqcDNtZ [...]
  tls.key: LS0tLS1CRUdJTiBQUklWQVRFIEtFWS0tLS0tCk1JSUV2d0lCQURBTkJna3Foa2lHOXcwQkFRRUZBQVNDQktrd2dnU2xBZ0VBQW9JQkFRRGRtNzVkbi9UYTlZTmsKRVg0VDhoeVhFS05oQjNJUWR0UUdGanAzbWdaOEdaY0lwMU5pNVRJeWoybnROMWo4VmNiTVR2aUZWMWVjYzRVSgo2MWQ4cHd0YmR4L1lQQmt5bHRFV3pZU3A0Z2V5YjBRMWk2c1RIRTg4VVVMaXhGRE0za2JDWnM4RnZ4VndNUWY1ClNmSGE3ejNhUG1VVkNIdGhQLzBpOHIycnVRd1JIVDlrK2VlZGJ4eUVFUWxNVm1xUzE2U0FPSDh3Uy9rdUxCZloKcVRaMzY4eTVTTTZnbWUwaFptUVluaDdqekxQK2hRUUlGR1FGS0RhMWlLazZZZXR0Q0U4ck1pYm43MnAvTC9GWgpaQm1DMWRrbHpYVGpaV [...]
kind: Secret
metadata:
  creationTimestamp: null
  name: bar-com-tls
  namespace: gateway-conformance-infra
type: kubernetes.io/tls
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: https-fingerprint-gw
  namespace: gateway-conformance-infra
spec:
  gatewayClassName: "{GATEWAY_CLASS_NAME}"
  listeners:
    - name: https-foo
      protocol: HTTPS
      port: 443
      hostname: foo.example.com
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            group: ""
            name: foo-com-tls
    - name: https-bar
      protocol: HTTPS
      port: 444
      hostname: bar.example.com
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            group: ""
            name: bar-com-tls
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: ClientTrafficPolicy
metadata:
  name: https-foo-ja3-ctp
  namespace: gateway-conformance-infra
spec:
  tls:
    fingerprints:
      - JA3
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: https-fingerprint-gw
      sectionName: https-foo
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-route-ja3-foo
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: https-fingerprint-gw
  hostnames:
    - foo.example.com
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: infra-backend-v1
          port: 8080
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            set:
              - name: ja3-fingerprint
                value: "%TLS_JA3_FINGERPRINT%"
              - name: ja4-fingerprint
                value: "%TLS_JA4_FINGERPRINT%"

---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: ClientTrafficPolicy
metadata:
  name: https-bar-ja3-and-ja4-ctp
  namespace: gateway-conformance-infra
spec:
  tls:
    fingerprints:
      - JA3
      - JA4
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: https-fingerprint-gw
      sectionName: https-bar
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-route-ja3-and-ja4-bar
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: https-fingerprint-gw
  hostnames:
    - bar.example.com
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: infra-backend-v1
          port: 8080
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            set:
              - name: ja3-fingerprint
                value: "%TLS_JA3_FINGERPRINT%"
              - name: ja4-fingerprint
                value: "%TLS_JA4_FINGERPRINT%"
